# co-dreamer-hackathon-20251011

./: .env_example  .gitignore  API_GUIDE.md  ART_RL.md  COPILOTKIT.md  DAYTONA_ARCHITECTURE.md  DAYTONA_INTEGRATION.md  INFO.md  MASTRA_FEATURES_ANALYSIS.md  MASTRA_USAGE.md  README.md  WANDB._WEAVE.md  WANDB_WEAVE.md  knowledge-graph-5-4.json  knowledge-graph-5-4.mmd  knowledge-graph.json  knowledge-graph.mmd  knowledge-graph_pp.json  original_brainstorm.md  package.json  pyproject.toml  setup.sh  test-anchor-graph.mmd  test-bakery-graph.mmd  test-codreamer-apis.sh  test-complete-flow.sh  test-dreamer.sh  test-graph.mmd  tsconfig.json
codreamer/: __init__.py
codreamer-agui/: .env.example  EMAIL_API_GUIDE.md  IMPLEMENTATION_PLAN.md  KG_GUIDE.md  LESSONS_LEARNED.md  PRD.md  README.md  package.json
codreamer-agui/public/: kg_example.json
codreamer/core/: __init__.py  config.py  data_models.py  prompts.py
codreamer/data/: default_graph.json  default_node_scores.json  feedback.jsonl  feedback_external.jsonl  graph copy.json  graph.json  iter1_node_scores.json  iter1_rewards_metrics.jsonl  iter1_step1_groups.jsonl  iter1_step2_groups.jsonl  iter2_node_scores.json  iter2_rewards_metrics.jsonl  iter2_step1_groups.jsonl  iter2_step2_groups.jsonl  iter3_node_scores.json  (+6 more)
daytona/: example.mts  getting-started-1.mts  getting-started-2.mts  getting-started-3.mts  ssh-access.ts
diagrams/: kg.mmd
docs/: brainstorm.txt
frontend/: README.md  index.html  package.json  vite.config.ts
mastra/: README.md  package.json
scripts/: graph-to-mermaid.ts  graph-to-png.ts
(+403 files in other folders)
